[package]
name = "pkl_fast"
version = "0.1.1"
edition = "2021"
authors = ["yatsu"]

description = "A library aiming to easily and efficiently work with Apple's PKL format."
repository = "https://github.com/DevYatsu/pkl_fast"
license = "MIT"

keywords = ["pkl_fast", "pkl", "serialization", "apple", "fast"]

[dependencies]
miette = {version = "7.0.0", features = ["fancy"]}
regex = "1.10.3"
thiserror = "1.0.57"
winnow = { version = "0.6.5", features = ["simd"] }
