[package]
name = "pkl_fast"
version = "0.1.1"
edition = "2021"
authors = ["yatsu"]

description = "A library aiming to easily and efficiently work with Apple's PKL format."
repository = "https://github.com/DevYatsu/pkl_fast"
license = "MIT"

keywords = ["pkl_fast", "pkl", "serialization", "apple", "fast"]

[dependencies]
chumsky = "0.9.3"
logos = "0.14.0"
miette = {version = "7.0.0", features = ["fancy"]}
rug = "1.24.0"
thiserror = "1.0.57"
